fix empty list parameters 2